--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-
+### Database ###
+spring.datasource.url=jdbc:h2:mem:library
+spring.datasource.username=daniela
+spring.datasource.password=1234
+spring.datasource.driverClassName=org.h2.Driver
+### JPA ###
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.defer-datasource-initialization=true
+### Encoding ###
+spring.messages.encoding=UTF-8
+### H2 ###
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
